--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
     --color-acento: #6c48d8;
     --color-acento-dos: #4d1cdd;
     --font-principal: 'Playwrite GB S', sans-serif;
-    --img-fondo: url("../assets/images/image-inicio3.jpg");
+    --img-fondo: url("../assets/images/fondobodega3.jpg");
+    --img-fondo-dos: url("../assets/images/destacado2.jpg");
 }
 
 
@@ -101,16 +102,18 @@ form{
 }
 .image-contacto{
     height: auto;
-    object-fit: cover;
-    background-image: url(../assets/images/image-inicio3.jpg);
+    background-size: cover;
+    background-position: center;
+    background-image: var(--img-fondo);
 }
 
 
 /* Seccion Nosotros */
 .image-nosotros{
-    height: auto;
-    object-fit: cover;
-    background-image: url(../assets/images/image-inicio3.jpg);
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    background-image: var(--img-fondo-dos);
 }
 /* Responsive */
 @media screen and (max-width: 576px) {
@@ -123,7 +126,7 @@ form{
 /* Seccion productos */
 .carousel-img-prod{
     width: 100vw;
-    height: 30vh;
+    height: 50vh;
     object-fit: cover;
 }
 
