--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,23 @@ form{
 }
 
 
+/* Sección detalles */
+.detalles {
+    .imagen-grande{
+        height: 600px;
+    }
+    .imagen-grande-i{
+        width: 100%;
+        height: 100%;
+    }
+    .imagen-chica{
+        height: 600px;
+    }
+    .imagen-chica-i{
+        height: 33%;
+        width: 100%;
+    }
+    .text-detalles{
+        height: 600px;
+    }
+}
