--- a/css/style.css
+++ b/css/style.css
@@ -143,16 +143,16 @@ form{
 
 
 /* Sección detalles */
-.detalles {
+/* .detalles {
     .imagen-grande{
-        height: 600px;
+        height: 500px;
     }
     .imagen-grande-i{
-        width: 100%;
-        height: 100%;
+        width: 98%;
+        height: 98%;
     }
     .imagen-chica{
-        height: 600px;
+        height: 500px;
     }
     .imagen-chica-i{
         height: 33%;
@@ -160,5 +160,86 @@ form{
     }
     .text-detalles{
         height: 600px;
+    }
+}
+/* Responsive 
+@media screen and (max-width: 576px) {
+    .imagen-chica{
+        height: 60px;
+    }
+    .imagen-chica-i{
+        height: 100%;
+        width: 33%;
+    }
+} 
+*/
+
+/* Sección detalles */
+.detalles {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+
+.imagen-grande {
+    flex: 1 1 50%;
+    padding: 10px;
+}
+
+.imagen-grande-i {
+    width: 100%;
+    height: auto;
+}
+
+.imagen-chica {
+    flex: 1 1 20%;
+    padding: 5px;
+}
+
+.imagen-chica-i {
+    width: 100%;
+    height: 33%;
+}
+
+.text-detalles {
+    flex: 1 1 30%;
+    padding: 10px;
+}
+
+.text-detalles h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.text-detalles p {
+    font-size: 1.1em;
+}
+
+/* Responsive */
+@media screen and (max-width: 576px) {
+    .detalles {
+        flex-direction: column;
+    }
+
+    .imagen-grande {
+        flex: 1 1 100%; 
+        padding: 10px;
+    }
+
+    .imagen-chica {
+        flex: 1 1 100%; 
+        display: flex;
+        justify-content: space-around;
+        padding: 10px 0;
+    }
+
+    .imagen-chica-i {
+        width: 30%;
+        height: auto;
+    }
+
+    .text-detalles {
+        flex: 1 1 100%;
+        padding: 10px;
     }
 }
