--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,21 @@ form{
     height: 50vh;
     object-fit: cover;
 }
+.card{
+    overflow: hidden;   
+}
+.imagen-tarj{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.card:hover{
+    box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.5);
+
+    .imagen-tarj{
+        scale: 1.05;
+    }
+}
 
 
 /* Botones para las cards */
