--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,14 @@ form{
     background-color: var(--color-acento-dos);
 }
 
+/* Botones para el filtrado */
+#btn-filt {
+    color: var(--color-acento);
+    background-color: var(--color-secundario);
+    border-radius: 24px;
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px
+}
+
 /* Sección detalles */
 .detalles {
     display: flex;
