--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ nav{
         border-radius: 50%;
     }
 
+    .nav-item{
+        margin-left: 30px;
+    }
+
 }
 
 
@@ -43,6 +47,13 @@ nav{
 }
 .footer{
     background-color: var(--color-secundario);
+}
+/* Responsive */
+@media screen and (max-width: 576px) {
+    .row{
+        flex-direction: column !important;
+        align-items: center;
+    }
 }
 
 
@@ -83,7 +94,6 @@ section{
 }
 
 
-
 /* Seccion Contactos */
 form{
     .form-contacto{
@@ -106,15 +116,16 @@ form{
 
 /* Seccion Nosotros */
 .image-nosotros{
-    height: 300px;
+    height: 250px;
     background-size: cover;
     background-position: center;
     background-image: var(--img-fondo-dos);
 }
+
 /* Responsive */
 @media screen and (max-width: 576px) {
-    .row{
-        flex-direction: column !important;
+    .image-nosotros{
+        height: 100px;
     }
 }
 
