--- a/css/style.css
+++ b/css/style.css
@@ -197,8 +197,9 @@ form{
 }
 .imagen-tarj{
     width: 100%;
-    height: 200px;
+    height: 110%;
     object-fit: cover;
+
 }
 .card:hover{
     box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.5);
