--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,8 @@ form{
 }
 .imagen-tarj{
     width: 100%;
-    height: 110%;
+    height: 200px;
     object-fit: cover;
-
 }
 .card:hover{
     box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.5);
