--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,21 @@ section{
     }
 }
 
+.image-nosotros{
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+    background-image: var(--img-fondo-dos);
+}
+
+/* Responsive */
+@media screen and (max-width: 576px) {
+    .image-nosotros{
+        height: 100px;
+    }
+}
+
+
 
 /* Seccion Contactos */
 form{
@@ -167,22 +182,6 @@ form{
     background-size: cover;
     background-position: center;
     background-image: var(--img-fondo);
-}
-
-
-/* Seccion Nosotros */
-.image-nosotros{
-    height: 250px;
-    background-size: cover;
-    background-position: center;
-    background-image: var(--img-fondo-dos);
-}
-
-/* Responsive */
-@media screen and (max-width: 576px) {
-    .image-nosotros{
-        height: 100px;
-    }
 }
 
 
@@ -309,7 +308,7 @@ form{
 
     .text-detalles {
         flex: 1 1 100%;
-        padding: 10px;
+        padding: 0px;
     }
 }
 
@@ -317,4 +316,8 @@ form{
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+.row {
+    --bs-gutter-x: 0 !important;
 }
